<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainlayout"
            android:layout_width="fill_parent"
            android:layout_height="800dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/resultEdit"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="75dp"
                android:ems="10"
                android:inputType="text"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="60sp" />

            <LinearLayout
                android:id="@+id/ButtonRow01"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn07"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btn07Click"
                    android:text="@string/btn_7"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/btn08"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btn08Click"
                    android:text="@string/btn_8"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/btn09"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btn09Click"
                    android:text="@string/btn_9"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btnAddClick"
                    android:text="@string/btn_Add"
                    android:textSize="60sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ButtonRow02"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                tools:layout_weight="1">

                <Button
                    android:id="@+id/btn04"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btn04Click"
                    android:text="@string/btn_4"
                    android:textSize="60sp"
                    tools:layout_weight="1" />

                <Button
                    android:id="@+id/btn05"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn05Click"
                    android:text="@string/btn_5"
                    android:textSize="60sp"
                    tools:layout_weight="1" />

                <Button
                    android:id="@+id/btn06"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn06Click"
                    android:text="@string/btn_6"
                    android:textSize="60sp"
                    tools:layout_weight="1" />

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btnMinusClick"
                    android:text="@string/btn_minus"
                    android:textSize="60sp"
                    tools:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ButtonRow03"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                tools:layout_weight="1">

                <Button
                    android:id="@+id/btn01"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btn01Click"
                    android:text="@string/btn_1"
                    android:textSize="60sp"
                    tools:layout_weight="1" />

                <Button
                    android:id="@+id/btn02"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btn02Click"
                    android:text="@string/btn_2"
                    android:textSize="60sp"
                    tools:layout_weight="1" />

                <Button
                    android:id="@+id/btn03"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btn03Click"
                    android:text="@string/btn_3"
                    android:textSize="60sp"
                    tools:layout_weight="1" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btnDivideClick"
                    android:text="@string/btn_Divide"
                    android:textSize="60sp"
                    tools:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ButtonRow04"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                tools:layout_weight="1">

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btnClearClick"
                    android:text="@string/btn_Clear"
                    android:textSize="60sp"
                    tools:layout_weight="1" />

                <Button
                    android:id="@+id/btn00"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btn00Click"
                    android:text="@string/btn_0"
                    android:textSize="60sp"
                    tools:layout_weight="1" />

                <Button
                    android:id="@+id/btnDot"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btnDotClick"
                    android:text="@string/btn_Dot"
                    android:textSize="60sp"
                    tools:layout_weight="1" />

                <Button
                    android:id="@+id/btnMultiply"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:onClick="btnMuliplyClick"
                    android:text="@string/btn_mulitiply"
                    android:textSize="60sp"
                    tools:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/btnResult"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="75dp"
                android:layout_weight="1"
                android:onClick="btnResultClick"
                android:text="@string/btn_result"
                android:textSize="60sp" />

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>